--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bivi Kashorra e Medeiros</title>
     <link rel="stylesheet" href="style.css">
     
 </head>
@@ -340,7 +340,7 @@
   </article>
   </dvi>
     </div>
-
+<script>alert("Feliz dia dos namorados meu amor, eu te amo demais!")</script>
     <script type="importmap">
 {
   "imports": {
